# zeromq-practices

./: CMakeLists.txt  FindCZMQ.cmake  FindPthread.cmake  FindZeroMQ.cmake  NMakefile  README.md  czmq_fix.h  czmq_x.c  czmq_x.h  identity.cpp  mtrelay.cpp  pub.cpp  rtdealer.cpp  rtreq.cpp  run_cmake.sh  sub.cpp  sync_wu_server.cpp  task_sink.cpp  task_worker.cpp  time_util.h  zmq.hpp  zmq_x.c  zmq_x.h  zmq_x_test.c  zmq_x_test1.c
chap2-sockets-and-patterns/: CMakeLists.txt  hello.cpp  pub.cpp
chap3-advanced-req-rep-patterns/: CMakeLists.txt  asyncsrv.cpp  mtrand.cpp  rtreq.cpp  task_sink.cpp  task_ventilator.cpp
chap3-advanced-req-rep-patterns/cluster/: endpoint.cpp  endpoints.h  prototype.cpp
chap4-reliable-req-rep-patterns/: CMakeLists.txt  lpclient.cpp  lpserver.cpp  ppqueue.c  ppworker.c  spbroker.cpp  spqueue.cpp  spworker.cpp
chap4-reliable-req-rep-patterns/majordomo/: client_api.txt  mdbroker.c  mdcliapi.c  mdcliapi.h  mdclient.c  mdp.h  mdworker.c  mdwrkapi.c  mdwrkapi.h  worker_api.txt
cluster/: endpoint.cpp  endpoint.h  endpoints.cpp  prototype.cpp  state_flow.cpp  task_flow.cpp
cmake/: FindZeroMQ.cmake
czmq_x/: CMakeLists.txt  czmq_x.c  czmq_x_test.c
hello/: client.cpp  server.cpp
named_pipe_win/: CMakeLists.txt  client.c  server.c
tools/: build.sh
zmq_x/: CMakeLists.txt  zmq_x.c  zmq_x_rep.c  zmq_x_req.c
