cmake_minimum_required(VERSION 2.6)
project(zeromq-practices)

# Setup build-related defaults
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
if(NOT CMAKE_INSTALL_PREFIX)
    set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/install)
endif()
if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/runtime)
endif()

add_subdirectory(chap2-sockets-and-patterns)
add_subdirectory(chap3-advanced-req-rep-patterns)
add_subdirectory(zmq_x)
add_subdirectory(czmq_x)
add_subdirectory(named_pipe_win)
add_subdirectory(chap4-reliable-req-rep-patterns)
